--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev:backend": "nodemon backend/src/index.js",
     "dev:frontend": "vite",
-    "dev": "npm run build && NODE_ENV=production node backend/src/index.js",
+    "dev": "npm run build && node backend/src/index.js",
     "start": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
     "build": "vite build",
     "seed": "node backend/src/seeds/user.seed.js",
